<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">TernaryCalc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="subtractSign">-</string>
    <string name="addSign">+</string>
    <string name="equalSign">=</string>
    <string name="result">0</string>
</resources>
