<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:onClick="addButtonClicked"
        android:text="@string/addSign" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/addButton"
        android:layout_below="@id/addButton"
        android:layout_marginTop="20dp"
        android:onClick="subtractButtonClicked"
        android:text="@string/subtractSign" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/subtractButton"
        android:layout_below="@id/subtractButton"        
        android:layout_marginTop="30dp"
        android:onClick="equalButtonClicked"
        android:text="@string/equalSign" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/equalButton"
        android:layout_alignBottom="@id/equalButton"
        android:layout_alignLeft="@+id/oneButton"
        android:onClick="twoButtonClicked"
        android:text="@string/two" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/subtractButton"
        android:layout_alignLeft="@id/oneButton"
        android:onClick="zeroButtonClicked"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/zeroButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@id/addButton"
        android:textSize="50sp"
        android:gravity="right"
        android:text="@string/result" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/equalButton"
        android:layout_alignLeft="@id/resultTextView"
        android:onClick="oneButtonClicked"
        android:text="@string/one" />

</RelativeLayout>